Some small design fixes: - Remove left padding from card titles - Set max width of expense name column - Add back scrollbar that was accidentally removed

--- a/app/mikane/src/app/pages/expenditures/expenditures.component.scss
+++ b/app/mikane/src/app/pages/expenditures/expenditures.component.scss
@@ -14,3 +14,7 @@
   right: 20px;
   z-index: 9999;
 }
+
+.expense-name {
+  max-width: 400px;
+}
